--- a/SHDI Introduction.html
+++ b/SHDI Introduction.html
@@ -69,6 +69,8 @@
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp; <a href="SHDI-2019.html">SHDI Symposiu-2019</a>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
+                    &nbsp; &nbsp; &nbsp; &nbsp; <a href="SHDI-2020.html">SHDI Symposiu-2020</a>
+                    &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                 </p>
             </div> 
     </div>
