--- a/SHDI-2019.html
+++ b/SHDI-2019.html
@@ -208,8 +208,8 @@
                     </caption>
                     <tbody >
                         <tr>
-                            <td style="width:60%">&nbsp;&nbsp;论坛合作:</td>
-                            <td>蒋林智</td>
+                            <td style="width:50%";text-indent: 2em">&nbsp;&nbsp;论坛合作:蒋林智</td>
+                            
                         </tr>
                     </tbody>
                 </tbody>
