--- a/SHDI-2019.html
+++ b/SHDI-2019.html
@@ -204,11 +204,11 @@
 
                 <table class="table table3">
                     <caption>
-                            论坛合作联系方式
+                            论坛赞助合作联系方式
                     </caption>
                     <tbody >
                         <tr>
-                            <td style="width:50%";text-indent: 2em">&nbsp;&nbsp;论坛合作:蒋林智</td>
+                            <td style="width:50%";text-indent: 2em">&nbsp;&nbsp;蒋林智</td>
                             
                         </tr>
                     </tbody>
