--- a/SHDI-2019.html
+++ b/SHDI-2019.html
@@ -202,13 +202,13 @@
                 </tbody>
                 </table>
 
-                <table class="table table3">
+                <table class="table table">
                     <caption>
-                            论坛赞助合作联系方式
+                            论坛赞助合作联系：
                     </caption>
                     <tbody >
                         <tr>
-                            <td style="width:50%";text-indent: 2em">&nbsp;&nbsp;蒋林智</td>
+                            <td style="width:50%";text-indent:2em">&nbsp;&nbsp;蒋林智</td>
                             
                         </tr>
                     </tbody>
