--- a/SHDI-2019.html
+++ b/SHDI-2019.html
@@ -202,7 +202,7 @@
                 </tbody>
                 </table>
 
-                <table class="table table">
+                <table class="table">
                     <caption>
                             论坛赞助合作联系：
                     </caption>
