--- a/SHDI-2019.html
+++ b/SHDI-2019.html
@@ -204,14 +204,13 @@
 
                 <table class="table">
                     <caption>
-                            论坛赞助合作联系：
-                    </caption>
+                            论坛赞助合作联系</caption>
                     <tbody >
-                        <tr>
-                            <td style="width:50%";text-indent:2em">&nbsp;&nbsp;蒋林智</td>
-                            
+                        <tr><td style="width:50%";text-indent:2em">&nbsp;&nbsp;蒋林智
+			</td>
                         </tr>
                     </tbody>
+	             </table>
                 </tbody>
             </table>
         </div>
