--- a/SHDI-2019.html
+++ b/SHDI-2019.html
@@ -206,7 +206,7 @@
                     <caption>
                             论坛赞助合作联系</caption>
                     <tbody >
-                        <tr><td style="width:50%";text-indent:2em">&nbsp;&nbsp;蒋林智
+                        <tr><td style="width:50%";text-indent:2em">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;蒋林智
 			</td>
                         </tr>
                     </tbody>
