--- a/SHDI Introduction.html
+++ b/SHDI Introduction.html
@@ -65,7 +65,7 @@
             <div class="introdution">
             <div id="theme">
                 <p style="text-indent:2em ">With rapid development of cyberspace security, artificial intelligence and cloud computing, researchers in academia and industry have constructed a large number of schemes, and designed many algorithms. In the meanwhile, the needs of industry and users are also growing urgently. Therefore, it is necessary to solve the software and hardware implementations of designed schemes and algorithms. The gradual maturity of software design theory and the rapid development and productization of hardware design and implementation provide a good foundation and opportunity for solving the above problems.<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp; SHDI Symposiu would like to invit well-known researchers all over the world to present their best works about software and hardware implementation on Cybersecurity schemes and algotihms. Everyone, who do the best works on above fields, will be inveted to attend our symposium, and present their invited talk. We would like to provid tranvel funding for invited speakers.
+                    &nbsp; &nbsp; &nbsp; &nbsp; SHDI symposiu would like to invit well-known researchers all over the world to present their best works about design and implementation of software and hardware on Cybersecurity schemes and algotihms. Everyone, who does the best works on above fields, will be invited to attend SHDI symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp; <a href="SHDI-2019.html">SHDI Symposiu-2019</a>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
