--- a/SMPC Introduction.html
+++ b/SMPC Introduction.html
@@ -63,10 +63,10 @@
             <div class="introdution">
             <div id="theme">
                 <p style="text-indent:2em ">Security multi-party computation is an important method to protect privacy of users, and is research hot. SMPC symposiu would like to invite the well-known researchers all over the world to share their works about smpc theory and applications. Everyone, who does the best works on SMPC, will be invited to attend SMPC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp; Invited talks including the following aspects: (1) SMPC theory and developments; (2) SMPC in post-quantum world; (3) Quantum SPMC; (4) SMPC applications.
-                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2017.html">SMPC Symposiu-2017</a>
-                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2018.html">SMPC Symposiu-2018</a>
-                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2019.html">SMPC Symposiu-2019</a>
+                    &nbsp; &nbsp; &nbsp; &nbsp; Invited talks including the following aspects: (1) SMPC theory and developments; (2) SMPC in post-quantum world; (3) Quantum SPMC; (4) SMPC applications.<br/>
+                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2017.html">SMPC Symposiu-2017</a> <br/>
+                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2018.html">SMPC Symposiu-2018</a> <br/>
+                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2019.html">SMPC Symposiu-2019</a> <br/>
                 </p>
             </div> 
             </div>
