--- a/index.html
+++ b/index.html
@@ -97,12 +97,7 @@ document.write("Welcome" + visits + "！")
                                 </li>
 
                                 <li class="submenu">
-                                    <a href="introduction.html">SMPC Symp</a>
-                                    <ul class="sub">
-                                        <li><a href="introduction.html">Introduction</a></li>
-                                        <li><a href="schedule.html">Schedule</a></li>
-                                        <li><a href="about.html">Register</a></li>
-                                    </ul>
+                                    <a href="SMPC Introduction.html">SMPC Symp</a>
                                 </li>
                                 <li class="submenu">
                                     <a href="introduction.html">QPQC Symp</a>
