--- a/SMPC Introduction.html
+++ b/SMPC Introduction.html
@@ -61,7 +61,7 @@
         <div id="introdution">
             <div class="introdution">
             <div id="theme">
-                       <a class="navbar-brand"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a> <br/>
+                      <img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a> <br/>
                 <p style="text-indent:2em ">Security multi-party computation is an important method to protect privacy of users, and is research hot. SMPC symposiu would like to invite the well-known researchers all over the world to share their works about smpc theory and applications. Everyone, who does the best works on SMPC, will be invited to attend SMPC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp; Invited talks including the following aspects: (1) SMPC theory and developments; (2) SMPC in post-quantum world; (3) Quantum SPMC; (4) SMPC applications.<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2017.html">SMPC Symposiu-2017</a> <br/>
