--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -75,7 +75,7 @@
                 </p>
             </div> 
             </div>
-		
+		</div>
  <div id="main2" >
         <style type="text/css">
 	table.tableizer-table {
@@ -95,9 +95,7 @@
 		margin: 3px;
 		max-width: 500px;
 		color: #FFF;
-		font-weight: bold;
-		
-		
+		font-weight: bold;	
 	}
 </style>       
 <table class="tableizer-table">
@@ -129,6 +127,7 @@
  <tr><td>14:00 - 17:30</td><td>自由论坛时间</td><td colspan="2">待定</td></tr>
 </tbody></table>
 	    </br></br>
+	    
       <div id="main2" >
         <div id="register">
             <table class="table">
