--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -136,7 +136,7 @@
                         
                     </div>
                 </div>
-			
+	</div>
 	<div id="main2" >
         <style type="text/css">
 	table.tableizer-table {
