--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -170,6 +170,7 @@
  <tr><td>14:00 - 17:30</td><td>自由论坛时间</td><td colspan="2">待定</td></tr>
 </tbody></table>
 	    </br></br>
+		</div>
           <div id="main2" >
         <div id="register">
             <table class="table">
