--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -115,8 +115,7 @@
 
                         
                     </div>
-                </div>
-	</div>
+              
 	<div id="main2" >
         <style type="text/css">
 	table.tableizer-table {
@@ -219,7 +218,7 @@
 
                 <table class="table table3">
                     <caption>
-                            会议合作联系方式: linzjiang#hotmail&nbspdot&nbspcom
+                            会议赞助与合作联系: 蒋林智；Email:linzjiang#hotmail dot com
                     </caption>
                     <tbody >
                         <tr>
