--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -115,7 +115,9 @@
 
                         
                     </div>
-              
+              </div>
+			</div>
+		    </div>
 	<div id="main2" >
         <style type="text/css">
 	table.tableizer-table {
