--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -172,6 +172,7 @@
 </tbody></table>
 	    </br></br>
 		</div>
+	</div>
           <div id="main2" >
         <div id="register">
             <table class="table">
