--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -107,7 +107,7 @@
 <p align="left">会议承办单位：北京航空航天大学 网络空间安全学院<br/></p>
 <p align="left">会议协办单位：杭州安恒信息技术股份有限公司、杭州数梦工场科技有限公司和杭州天谷信息科技有限公司。<br/></p>
 <p align="left">会议报告地点：北京航空航天大学 杭州研究院 报告厅（浙江省杭州市滨江区创慧街18号）。<br/></p>
-            
+             </div> 
  	</div>   
 	<div id="main2" >
         <style type="text/css">
