--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -211,7 +211,7 @@
 
                 <table class="table table3">
                     <caption>
-                            会议合作联系方式: linzjiang#hotmail&nbspdot&nbspcom
+                            会议赞助与合作联系: 蒋林智； linzjiang#hotmail dot com
                     </caption>
                     <tbody >
                         <tr>
