--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -122,6 +122,7 @@
 		margin: 3px;
 		max-width: 500px;
 		border: 1px solid #CCC;
+		text-align: center;
 	}
 	.tableizer-table th {
 		background-color: #104E8B;
