--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -9,6 +9,9 @@
     <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     -->
+    <style>
+		body {text-align: center;} table {margin: auto;}
+    </style>
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
