--- a/CC Introduction.html
+++ b/CC Introduction.html
@@ -68,7 +68,7 @@
         <div id="introdution">
             <div class="introdution">
             <div id="theme">
-                <p style="text-indent:2em ">Code and Crypto are two foundations of communication and CyberSecurity. They protect data, storage, transmission and processing. 为了对密码与编码理论的研究现状、未来及应用进行交流和讨论<br/>
+                <p style="text-indent:2em ">Code and Crypto are two foundations of communication and CyberSecurity. They protect data, storage, transmission and processing.<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp; CC symposium would like to invit well-known researchers all over the world to present their best works about state-of-art, research trends and applications on Code and Cryptography. Everyone, who does the best works on above fields, will be invited to attend CC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
