--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -76,6 +76,7 @@
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2017.html">QPQC Symposiu-2017</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2018.html">QPQC Symposiu-2018</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2019.html">QPQC Symposiu-2019</a> <br/>
+                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2020.html">QPQC Symposiu-2020</a> <br/>
                 </p>
             </div> 
             </div>
