--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -68,8 +68,8 @@
         <div id="introdution">
             <div class="introdution">
             <div id="theme">
-                <p style="text-indent:2em ">With development of Quantum computation, most of Crypto scheme maybe not secure. How to protect data secure and privacy of user is research trend. Lattice-based crypto and FHE (Fully Homomorphic Encryption) give the ways to protect data storage, transmission, verification and processing in the quantum world.<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp; QPQC symposium would like to invit well-known researchers all over the world to present their best works about state-of-art, research trends and applications on PQC and QC. Everyone, who does the best works on above fields, will be invited to attend QPQC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
+                <p style="text-indent:2em ">Quantum computation and its implementation show enormous threats to most of the Crypto schemes, which maybe not secure in the future. How to protect data secure and privacy of user is research trend. Lattice-based crypto and FHE (Fully Homomorphic Encryption) give the ways to protect data storage, transmission, verification and processing in the quantum world.<br/>
+                    &nbsp; &nbsp; &nbsp; &nbsp; QPQC symposium would like to invit well-known researchers all over the world to present their best works (QPC and QC)about state-of-art, research trends and applications on PQC and QC. Everyone, who does the best works on above fields, will be invited to attend QPQC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                      &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2016.html">QPQC Symposiu-2016</a> <br/>
