--- a/index.html
+++ b/index.html
@@ -684,12 +684,12 @@ document.write("Welcome" + visits + "！")
                                     • Journal of Computers (Chinese)<br/>
                                     • Journal of Software and Journal of Cryptologic Research (Chinese)<br/></p>
                                 <p style="width: 96%;float: right"><b>Conference Service</b><br/></p>
-                                <p style="font-size:15px;width: 90%;float: right">• Initiator/Organizer: International Symposium of Coding and Cryptography, 2018–2019<br/>
-                                    • Initiator//Organizer/Chair: International Symposium of Software and Hardware Design and Implementation--SHDI Symp,
-                                    2018–2019<br/>
-                                    • Initiator//Organizer/Chair: International Symposium of Secure Multiparty Computation--SMPC Symp, 2017–2019<br/>
-                                    • Initiator/Organizer: International Symposium of Quantum Computing and Post-Quantum Cryptography --QPQC Symp, 2016–2019<br/>
-                                    • Initiator/Organizer: International Cyber Security and Applied Cryptography Conference--CSAC Symp, 2018–2019<br/></p>
+                                <p style="font-size:15px;width: 90%;float: right">• Initiator/Organizer: International Symposium of Coding and Cryptography, 2018–<br/>
+                                    • Sponsor/Chair of organizing committees: International Symposium of Software and Hardware Design and Implementation--SHDI Symp,
+                                    2018–<br/>
+                                    • Sponsor/Chair of organizing committees: International Symposium of Secure Multiparty Computation--SMPC Symp, 2017–<br/>
+                                    • Sponsor/Chair of organizing committees: International Symposium of Quantum Computing and Post-Quantum Cryptography --QPQC Symp, 2016–<br/>
+                                    • Sponsor/Chair of organizing committees: International Cyber Security and Applied Cryptography Conference--CSAC Symp, 2018–<br/></p>
                             </td>
                         </tr>
                         <tr>
