--- a/Member Lin.html
+++ b/Member Lin.html
@@ -724,12 +724,13 @@ document.write("Welcome" + visits + "！")
                                 <p style="text-indent:0em;text-align: center  ;padding-top: 5px"><b>PROFESSIONAL <br/>MEMBERSHIPS</b><br/></p>
                             </td>
                             <td id="table1">
-                                <p style="width: 96%;float: right;font-size: 15px">[1]Institute for Electrical and Electronics Engineers (IEEE), Member, 2014–present<br/>
-                                    [2]Association for Computing Machinery (ACM), Member, 2014–present<br/>
-                                    [3]Chinese Association for Cryptologic Research (CACR), Member, 2014–present<br/>
-                                    [4]China Computer Federation (CCF), Member, 2014–present<br/>
-                                    [5]Chinese Association for Artificial Intelligence (CAAI), Member, 2018–present<br/>
-                                    [6]Chinese Institute of Electronics (CIE), Member, 2014–present<br/></p>
+                                <p style="width: 96%;float: right;font-size: 15px">
+                                    [1] Institute for Electrical and Electronics Engineers (IEEE), Member, 2014–present<br/>
+                                    [2] Association for Computing Machinery (ACM), Member, 2014–present<br/>
+                                    [3] Chinese Association for Cryptologic Research (CACR), Member, 2014–present<br/>
+                                    [4] China Computer Federation (CCF), Member, 2014–present<br/>
+                                    [5] Chinese Association for Artificial Intelligence (CAAI), Member, 2018–present<br/>
+                                    [6] Chinese Institute of Electronics (CIE), Member, 2014–present<br/></p>
                             </td>
                         </tr>
                         <tr>
@@ -749,8 +750,7 @@ document.write("Welcome" + visits + "！")
                             </td>
                             <td id="table1">
                                 <p style="width: 96%;float: right">Application of Post-Quantum Cryptography, Privacy-preserving Big Data and Cloud Computing,
-                                    IoT Security, 5G Security, Machine Learning and Deep Learning Privacy Protection, Image
-                                    Processing Security, DAA Application.
+                                    IoT Security, 5G Security, Machine Learning and Deep Learning Privacy Protection, Image Processing Security, DAA Application.
                                     <br/></p>
                             </td>
                         </tr>
