--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@ document.write("Welcome" + visits + "！")
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-                    <p style="text-align: center;font-size: 25px"></p><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey, SCCS, Guildford, UK</a>
+                    <p style="text-align: center;font-size: 35px"></p><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey, SCCS, Guildford, UK</a>
                      <hr>
-                    <p style="text-indent:2em ">The Development Institute of Digital Future (DFSC) is an innovative research institute, which is engaged in research of information science, and dedicates to research and implementation of information storage, processing and security in the future world. DFSC has invited a group of professors and researchers with outstanding achievements in information science to join us.<br/>
-                    <p style="text-indent:2em ">Since the establishment of DFSC, we have initiated and organized a series of conferences in information science including: <a href="SHDI Introduction.html">SHDI Symposium,</a> <a href="SMPC Introduction.html">SMPC Symposiu,</a> <a href="QPQC Introduction.html">QPQC Symposium,</a>, <a href="CSAC Introduction.html">CSAC Symposium</a> and <a href="CC Introduction.html">CC Symposium</a>. DFSC has achieve a series of cooperation agreements with the relevant universities/institutes and enterprises .<br/>
+                    <p style="text-indent:2em ">The Development Institute of Digital Future (DFSC) is an innovative research institute, which is engaged in research of information science, and dedicates to research and implementation of information storage, processing and security in the future world. DFSC has invited a group of professors and researchers in information science to join us.<br/>
+                    <p style="text-indent:2em ">Since the establishment of DFSC, we have initiated and organized a series of conferences in information science including: <a href="SHDI Introduction.html">SHDI Symposium,</a> <a href="SMPC Introduction.html">SMPC Symposiu,</a> <a href="QPQC Introduction.html">QPQC Symposium,</a> <a href="CSAC Introduction.html">CSAC Symposium</a> and <a href="CC Introduction.html">CC Symposium</a>. DFSC has achieve a series of cooperation agreements with the relevant universities/institutes and enterprises .<br/>
                    <hr>
         </div>
 <script type="text/javascript">
