--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@ document.write("Welcome" + visits + "！")
                     <p style="text-indent:2em ">The Development Institute of Digital Future (DFSC) is an innovative research institute, which is engaged in research of information science, and dedicates to information storage, processing and security in the future world. We have invited a group of professors and researchers in information science to join in DFSC.<br/>
                     <p style="text-indent:2em ">Since the establishment of DFSC, we have initiated and organized a series of conferences in information science including: <a href="SHDI Introduction.html">SHDI Symposium,</a> <a href="SMPC Introduction.html">SMPC Symposiu,</a> <a href="QPQC Introduction.html">QPQC Symposium,</a> <a href="CSAC Introduction.html">CSAC Symposium</a> and <a href="CC Introduction.html">CC Symposium</a>. DFSC has achieve a series of cooperation agreements with the relevant universities/institutes and enterprises.<br/>
                    <hr>
-                    <p style="text-indent:2em ">Conference advertising events with sponsors: Welcome to sponsor our meeting. We will provide a series of benefits including product display for conference sponsors.<br/>
+                    <p style="text-indent:2em ">Conferences advertising events with sponsors: Welcome to sponsor our international conference. We will provide a series of benefits including product display etc. for conference sponsors. Contaction Information: Dr. Linzhi Jiang Email:linzjiang (#) hotmail (dot) com<br/>
+                    <hr>
+                    <p style="text-indent:2em ">Research cooperation: Welcome to carry out research cooperation with us in information science. Contaction Information: Dr. Linzhi Jiang Email:linzjiang (#) hotmail (dot) com<br/>
         </div>
 <script type="text/javascript">
 function googleTranslateElementInit() {
