--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ document.write("Welcome" + visits + "！")
                     <p style="text-indent:2em ">Since the establishment of DFSC, we have initiated and organized a series of conferences in information science including: <a href="SHDI Introduction.html">SHDI Symposium,</a> <a href="SMPC Introduction.html">SMPC Symposiu,</a> <a href="QPQC Introduction.html">QPQC Symposium,</a> <a href="CSAC Introduction.html">CSAC Symposium</a> and <a href="CC Introduction.html">CC Symposium</a>. DFSC has achieve a series of cooperation agreements with Universities/Colleges/Schools and Enterprises.<br/>
                     <p style="text-indent:2em ">We also provide <a href="Online Courses.html">online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Difference of privacy, AI and IoT etc. <br/> 
                     <hr>
-                    <p style="text-indent:2em ">Research Courses of Information Science: Dr. Linzhi Jiang Email:linzjiang (#) hotmail (dot) com. <br/>
+                    <p style="text-indent:2em ">Online Training Courses: Dr. Linzhi Jiang Email:linzjiang (#) hotmail (dot) com. <br/>
                     <p style="text-indent:2em ">Conferences Advertising Events with Sponsors: Dr. Linzhi Jiang Email:linzjiang (#) hotmail (dot) com. We will provide a series of benefits including product display etc. for conference sponsors.<br/>
                     <p style="text-indent:2em ">Research Cooperation: Dr. Linzhi Jiang Email:linzjiang (#) hotmail (dot) com.<br/>
                     
