--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ document.write("Welcome" + visits + "！")
                                     
                                 </li>
                                  <li class="submenu">
-                                    <a href="courses.html">Online Courses</a>
+                                    <a href="courses.html">Courses</a>
                                     
                                 </li>
                             </ul>
