--- a/CC Introduction.html
+++ b/CC Introduction.html
@@ -55,10 +55,10 @@
                                     <a href="courses.html">Courses</a>
                                 </li>
                                 <li class="submenu">
-                                    <a href="project.html">Project</a>
+                                    <a href="project.html">Projects</a>
                                 </li>
                                 <li class="submenu">
-                                    <a href="product.html">Product</a>
+                                    <a href="product.html">Products</a>
                                 </li>
                             </ul>
                         </div>
