--- a/SMPC Introduction.html
+++ b/SMPC Introduction.html
@@ -53,6 +53,12 @@
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
                                 </li>
+                                <li class="submenu">
+                                    <a href="project.html">Projects</a>
+                                </li>
+                                <li class="submenu">
+                                    <a href="product.html">Products</a>
+                                </li>
                             </ul>
                         </div>
                     </div><!-- /.container-->
