--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@ document.write("Welcome" + visits + "！")
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
                                 </li>
+                                 <li class="submenu">
+                                    <a href="project.html">Projects</a>
+                                </li>
+                                <li class="submenu">
+                                    <a href="product.html">Products</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
