--- a/syllabus.html
+++ b/syllabus.html
@@ -127,12 +127,25 @@ document.write("Welcome" + visits + "！")
                 <div id="theme">
                     <p style="text-align: center;font-size: 20px">FHE Online Training Courses Syllabus</p>
                      <hr>
+                     <p style="text-align: center;font-size: 20px">Syllabus</p>
+                     <hr>
                     <p style="text-indent:2em ">Online Course of Fully Homomorphic Encryptiont would like to introduction the foundation including numeber theory, basic lattice theory, classic schemes analysis of Fully Homomrphic Encryption and experiment. This is the first Systematic course for FHE.<br/> 
                     <hr>
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption Foundation<br/>
                     <p style="text-indent:2em ">*Classic Schemes Analysis of Fully Homomrphic Encryption<br/>
                     <p style="text-indent:2em ">*Hommorphic Encryption Scheme Implementation<br/>
-                    <hr> 
+                    <hr>
+                    <p style="text-align: center;font-size: 20px">Lectures</p>
+                    <p style="text-indent:2em ">*Algebric Number Theory<br/>
+                    <p style="text-indent:2em ">*Lattice Introduction<br/>
+                    <p style="text-indent:2em ">*Partially Homomorphic Encryption<br/>
+                    <p style="text-indent:2em ">*Integer-based Fully Homomorphic Encryption<br/>
+                    <p style="text-indent:2em ">*Lwe-based Fully Homomorphic Encryption<br/>
+                    <p style="text-indent:2em ">*Rlwe-based Fully Homomorphic Encryption<br/>
+                    <p style="text-indent:2em ">*Integer-based Fully Homomorphic Encryption<br/>
+                    <p style="text-indent:2em ">*Homomoprhic Encryption Implement (Experiments) <br/>
+                    <p style="text-indent:2em ">*Homomorphic Encryption Applications<br/>
+                     
         </div>
 <script type="text/javascript">
 function googleTranslateElementInit() {
