--- a/syllabus.html
+++ b/syllabus.html
@@ -125,7 +125,7 @@ document.write("Welcome" + visits + "！")
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-                    <p style="text-align: center;font-size: 20px">FHE Online Training Courses Syllabus</p>
+                    <p style="text-align: center;font-size: 20px">FHE Online Training Courses</p>
                      <hr>
                      <p style="text-align: center;font-size: 20px">Syllabus</p>
                      <hr>
