--- a/syllabus.html
+++ b/syllabus.html
@@ -127,7 +127,7 @@ document.write("Welcome" + visits + "！")
                 <div id="theme">
                     <p style="text-align: center;font-size: 20px">FHE Online Training Courses</p>
                     <hr>
-                    <p style="text-indent:2em ">Online Course of Fully Homomorphic Encryptiont would like to introduction the foundation including numeber theory, basic lattice theory, classic schemes analysis of Fully Homomrphic Encryption and experiment. This is the first Systematic course for FHE.<br/> 
+                    <p style="text-indent:2em ">Online Course of Fully Homomorphic Encryptiont would like to introduction the foundation including numeber theory, basic lattice theory, classic schemes analysis of Fully Homomrphic Encryption and implementation. This is the first systematic course for FHE.<br/> 
                      <p style="text-align: center;font-size: 20px">Syllabus</p>
                      <hr>
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption Foundation<br/>
