--- a/syllabus.html
+++ b/syllabus.html
@@ -135,15 +135,16 @@ document.write("Welcome" + visits + "！")
                     <p style="text-indent:2em ">*Hommorphic Encryption Scheme Implementation<br/>
                     <hr>
                     <p style="text-align: center;font-size: 20px">Lectures</p>
+                     <p style="text-indent:2em ">*Algebra and Finite Field<br/>
                     <p style="text-indent:2em ">*Algebric Number Theory<br/>
                     <p style="text-indent:2em ">*Lattice Introduction<br/>
                     <p style="text-indent:2em ">*Partially Homomorphic Encryption<br/>
                     <p style="text-indent:2em ">*Integer-based Fully Homomorphic Encryption<br/>
                     <p style="text-indent:2em ">*Lwe-based Fully Homomorphic Encryption<br/>
                     <p style="text-indent:2em ">*Rlwe-based Fully Homomorphic Encryption<br/>
-                    <p style="text-indent:2em ">*Integer-based Fully Homomorphic Encryption<br/>
                     <p style="text-indent:2em ">*Homomoprhic Encryption Implement (Experiments) <br/>
                     <p style="text-indent:2em ">*Homomorphic Encryption Applications<br/>
+                    <p style="text-indent:2em ">*Trainee Driector<br/>
                      
         </div>
 <script type="text/javascript">
