--- a/syllabus.html
+++ b/syllabus.html
@@ -125,7 +125,7 @@ document.write("Welcome" + visits + "！")
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-                    <p style="text-align: center;font-size: 20px">FHE Online Training Courses</p>
+                    <p style="text-align: center;font-size: 20px">FHE Online Training Course</p>
                     <hr>
                     <p style="text-indent:2em ">Online Course of Fully Homomorphic Encryptiont would like to introduction the foundation including numeber theory, basic lattice theory, classic schemes analysis of Fully Homomrphic Encryption and implementation. This is the first systematic course for FHE.<br/> 
                      <p style="text-align: center;font-size: 20px">Syllabus</p>
@@ -135,7 +135,8 @@ document.write("Welcome" + visits + "！")
                     <p style="text-indent:2em ">*Hommorphic Encryption Scheme Implementation<br/>
                     <hr>
                     <p style="text-align: center;font-size: 20px">Lectures</p>
-                     <p style="text-indent:2em ">*Algebra and Finite Field<br/>
+                     <hr>
+                    <p style="text-indent:2em ">*Algebra and Finite Field<br/>
                     <p style="text-indent:2em ">*Algebric Number Theory<br/>
                     <p style="text-indent:2em ">*Lattice Introduction<br/>
                     <p style="text-indent:2em ">*Partially Homomorphic Encryption<br/>
