--- a/syllabus.html
+++ b/syllabus.html
@@ -128,7 +128,7 @@ document.write("Welcome" + visits + "！")
                     <p style="text-align: center;font-size: 20px">FHE Online Training Course</p>
                     <hr>
                     <p style="text-indent:2em ">Online Course of Fully Homomorphic Encryptiont would like to introduction the foundation，research trends and application including numeber theory, basic lattice theory, classic schemes analysis of Fully Homomrphic Encryption and implementation. 
-                        This is the first systematic course for FHE. This course is a 30 hours course, which will admit 40 excellent trainee including young researcher, master and Ph.D. Every registed trainee will get the whole Fully Homomorphic Encryption theory.<br/> 
+                        This is the first systematic course for FHE. This is a 30 hours training course, which will admit 40 excellent trainee including young researcher, master and Ph.D. Every registed trainee will get the whole Fully Homomorphic Encryption theory.<br/> 
                      <p style="text-align: center;font-size: 20px">Syllabus</p>
                      <hr>
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption Foundation<br/>
