--- a/syllabus.html
+++ b/syllabus.html
@@ -138,7 +138,7 @@ document.write("Welcome" + visits + "！")
                     <p style="text-align: center;font-size: 20px">Lectures</p>
                      <hr>
                     <p style="text-indent:2em ">*Algebra and Finite Field<br/>
-                    <p style="text-indent:2em ">*Algebric Number Theory<br/>
+                    <p style="text-indent:2em ">*Number Theory<br/>
                     <p style="text-indent:2em ">*Lattice Introduction<br/>
                     <p style="text-indent:2em ">*Partially Homomorphic Encryption<br/>
                     <p style="text-indent:2em ">*Integer-based Fully Homomorphic Encryption<br/>
