--- a/courses.html
+++ b/courses.html
@@ -130,7 +130,7 @@ document.write("Welcome" + visits + "！")
                     <p style="text-indent:2em ">We also provide online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> 
                     <hr>
                 
-                    <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation  <a href="syllabus.html">Syllabus(课程安排)</a> <a href="image/2020-03-07-online-training-course-注册登记表.rar" download="2020-03-07-online-training-course-注册登记表.rar">Registration Form(注册登记表)</a><br/>
+                    <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation  <a href="FHE syllabus.html">Syllabus(课程安排)</a> <a href="image/2020-03-07-online-training-course-注册登记表.rar" download="2020-03-07-online-training-course-注册登记表.rar">Registration Form(注册登记表)</a><br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation<br/>
                     <p style="text-indent:2em ">*Secure Multi-party Computation and Implementation<br/>
                     <p style="text-indent:2em ">*Difference of Privacy<br/>
