--- a/SMPC syllabus.html
+++ b/SMPC syllabus.html
@@ -125,7 +125,7 @@ document.write("Welcome" + visits + "！")
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-                     <p style="text-align:center"><img alt="FHE training course" src="online+course-SMPC-1.jpeg"  style="width: 210px; height: 520px; " ></a> <img alt="FHE training course" src=""  style="width: 210px; height: 520px; " ></a> <img alt="FHE training course" src="image/"  style="width: 210px; height: 520px; " ></a> <br/>
+                     <p style="text-align:center"><img alt="SMPC training course" src="online+course-SMPC-1.jpeg"  style="width: 210px; height: 520px; " ></a><br/>
                     <p style="text-align: center;font-size: 20px">FHE Online Training Course</p>
                     <hr>
                     <p style="text-indent:2em ">Online Course of Fully Homomorphic Encryptiont would like to introduction the foundation，research trends and application including numeber theory, basic lattice theory, classic schemes analysis of Fully Homomrphic Encryption and implementation. 
