--- a/SMPC syllabus.html
+++ b/SMPC syllabus.html
@@ -126,27 +126,26 @@ document.write("Welcome" + visits + "！")
             <div class="introdution">
                 <div id="theme">
                      <p style="text-align:center"><img alt="SMPC training course" src="online+course-SMPC-1.jpeg"  style="width: 210px; height: 520px; " ></a><br/>
-                    <p style="text-align: center;font-size: 20px">FHE Online Training Course</p>
+                    <p style="text-align: center;font-size: 20px">SMPC Online Training Course</p>
                     <hr>
-                    <p style="text-indent:2em ">Online Course of Fully Homomorphic Encryptiont would like to introduction the foundation，research trends and application including numeber theory, basic lattice theory, classic schemes analysis of Fully Homomrphic Encryption and implementation. 
-                        This is the first systematic course for FHE. This 30 hours training course will admit 40 excellent trainees including young researcher, master and Ph.D. Every registed trainee will get the whole Fully Homomorphic Encryption theory.<br/> 
+                    <p style="text-indent:2em ">Online Course This 30 hours training course will admit 40 excellent trainees including young researcher, master and Ph.D. <br/> 
                      <p style="text-align: center;font-size: 20px">Syllabus</p>
                      <hr>
-                    <p style="text-indent:2em ">*Fully Homomorphic Encryption Foundation<br/>
-                    <p style="text-indent:2em ">*Classic Schemes Analysis of Fully Homomrphic Encryption<br/>
-                    <p style="text-indent:2em ">*Hommorphic Encryption Scheme Implementation<br/>
+                    <p style="text-indent:2em ">*<br/>
+                    <p style="text-indent:2em ">*<br/>
+                    <p style="text-indent:2em ">*<br/>
                     <hr>
                     <p style="text-align: center;font-size: 20px">Lectures</p>
                      <hr>
-                    <p style="text-indent:2em ">*Algebra and Finite Field<br/>
-                    <p style="text-indent:2em ">*Number Theory<br/>
-                    <p style="text-indent:2em ">*Lattice Introduction<br/>
-                    <p style="text-indent:2em ">*Partially Homomorphic Encryption<br/>
-                    <p style="text-indent:2em ">*Integer-based Fully Homomorphic Encryption<br/>
-                    <p style="text-indent:2em ">*Lwe-based Fully Homomorphic Encryption<br/>
-                    <p style="text-indent:2em ">*Rlwe-based Fully Homomorphic Encryption<br/>
-                    <p style="text-indent:2em ">*Homomoprhic Encryption Implement (Experiments) <br/>
-                    <p style="text-indent:2em ">*Homomorphic Encryption Applications<br/>
+                    <p style="text-indent:2em ">*<br/>
+                    <p style="text-indent:2em ">*<br/>
+                    <p style="text-indent:2em ">*<br/>
+                    <p style="text-indent:2em ">*<br/>
+                    <p style="text-indent:2em ">*<br/>
+                    <p style="text-indent:2em ">*<br/>
+                    <p style="text-indent:2em ">*<br/>
+                    <p style="text-indent:2em ">* <br/>
+                    <p style="text-indent:2em ">*<br/>
                     <p style="text-indent:2em ">*Trainee Driector<br/>
                      
         </div>
