--- a/courses.html
+++ b/courses.html
@@ -132,7 +132,7 @@ document.write("Welcome" + visits + "！")
                 
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation <a href="FHE syllabus.html">FHE Syllabus(课程安排)</a> <a href="image/2020-03-07-online-training-course-注册登记表.rar" download="2020-03-07-online-training-course-注册登记表.rar">Registration Form(注册登记表)</a><br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation<br/>
-                    <p style="text-indent:2em ">*Secure Multi-party Computation and Implementation <a href="SMPC syllabus.html">FHE Syllabus(课程安排)</a> <a href="image/Training Course Registration Form-培训课程注册登记表.rar" download="Training Course Registration Form-培训课程注册登记表.rar">Registration Form(注册登记表)</a><br/>
+                    <p style="text-indent:2em ">*Secure Multi-party Computation and Implementation <a href="SMPC syllabus.html">SMPC Syllabus(课程安排)</a> <a href="image/Training Course Registration Form-培训课程注册登记表.rar" download="Training Course Registration Form-培训课程注册登记表.rar">Registration Form(注册登记表)</a><br/>
                     <p style="text-indent:2em ">*Difference of Privacy<br/>
                     <p style="text-indent:2em ">*AI and Security<br/>
                            <hr>
