--- a/SMPC syllabus.html
+++ b/SMPC syllabus.html
@@ -125,7 +125,7 @@ document.write("Welcome" + visits + "！")
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-                    <p style="text-align:center"><img alt="SMPC training course" src="onlin course-SMPC-poster.jpeg"  style="width: 210px; height: 520px; " ></a> <br/>
+                    <p style="text-align:center"><img alt="FHE training course" src="image/FHE-POSTER.jpeg"  style="width: 210px; height: 520px; " ></a> <img alt="FHE training course" src="image/FHE+课程安排.jpeg"  style="width: 210px; height: 520px; " ></a> <img alt="FHE training course" src="image/FHE-授课方式.jpeg"  style="width: 210px; height: 520px; " ></a> <br/>
                     <p style="text-align: center;font-size: 20px">SMPC Online Training Course</p>
                     <hr>
                     <p style="text-indent:2em ">Online Course This 30 hours training course will admit 40 excellent trainees including young researcher, master and Ph.D. <br/> 
