--- a/SMPC syllabus.html
+++ b/SMPC syllabus.html
@@ -128,7 +128,7 @@ document.write("Welcome" + visits + "！")
                     <p style="text-align:center"><img alt="SMPC training course" src="image/onlin course-SMPC-poster.jpeg"  style="width: 210px; height: 520px; " ></a> <br/>
                     <p style="text-align: center;font-size: 20px">SMPC Online Training Course</p>
                     <hr>
-                    <p style="text-indent:2em ">Online Course This 30 hours training course will admit 40 excellent trainees including young researcher, master and Ph.D. <br/> 
+                    <p style="text-indent:2em ">Online Course is 30 hours training course, wich will admit 40 excellent trainees including young researcher, Ph.D. and master students.<br/> 
                      <p style="text-align: center;font-size: 20px">Syllabus</p>
                      <hr>
                     <p style="text-indent:2em ">*<br/>
