--- a/SMPC syllabus.html
+++ b/SMPC syllabus.html
@@ -128,7 +128,8 @@ document.write("Welcome" + visits + "！")
                     <p style="text-align:center"><img alt="SMPC training course" src="image/onlin course-SMPC-poster.jpeg"  style="width: 210px; height: 520px; " ></a> <br/>
                     <p style="text-align: center;font-size: 20px">SMPC Online Training Course</p>
                     <hr>
-                    <p style="text-indent:2em ">Online Course is 30 hours training course, wich will admit 40 excellent trainees including young researcher, Ph.D. and master students.<br/> 
+                    <p style="text-indent:2em ">Secure multi-party computation is one of the effective means to realize multi-party cooperative data processing. It is also one of the major methos to protect data security and users privacy. Online Course is 30 hours training course, wich will admit 40 excellent trainees including young researcher, Ph.D. and master students.
+                        <br/> 
                      <p style="text-align: center;font-size: 20px">Syllabus</p>
                      <hr>
                     <p style="text-indent:2em ">*<br/>
