--- a/SMPC syllabus.html
+++ b/SMPC syllabus.html
@@ -125,7 +125,7 @@ document.write("Welcome" + visits + "！")
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-                    <p style="text-align:center"><img alt="SMPC 课程安排" src="image/SMPC-课程安排.jpeg"  style="width: 210px; height: 520px; " ></a> <img alt="SMPC 授课方式" src="image/SMPC-授课方式.jpeg"  style="width: 210px; height: 520px; " ></a> <img alt="SMPC training course" src="image/onlin course-SMPC-poster.jpeg"  style="width: 210px; height: 520px; " ></a> <br/>
+                    <p style="text-align:center"><img alt="SMPC training course" src="image/onlin course-SMPC-poster.jpeg"  style="width: 210px; height: 520px; " ></a>  <img alt="SMPC training course" src="image/SMPC-授课方式.jpeg"  style="width: 210px; height: 520px; " ></a> <img alt="SMPC training course" src="image/SMPC-课程安排.jpeg"  style="width: 210px; height: 520px; " ></a> <br/>
                     <p style="text-align: center;font-size: 20px">SMPC Online Training Course</p>
                     <hr>
                     <p style="text-indent:2em ">Secure multi-party computation is one of the effective means to realize multi-party cooperative data processing. It is also one of the major methos to protect data security and users privacy. Online Course is 30 hours training course, wich will admit 40 excellent trainees including young researcher, Ph.D. and master students.
