--- a/PQC syllabus.html
+++ b/PQC syllabus.html
@@ -125,8 +125,8 @@ document.write("Welcome" + visits + "！")
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-                    <p style="text-align:center"><img alt="" src=""  style="width: 210px; height: 520px; " ></a>  <img alt=""   style="width: 210px; height: 520px; " ></a> <img alt= src=""  style="width: 210px; height: 520px; " ></a> <br/>
-                    <p style="text-align: center;font-size: 20px">SMPC Online Training Course</p>
+                    <p style="text-align:center"><img alt="" src=""  style="width: 210px; height: 520px; " ></a>  <img alt=""  src="" style="width: 210px; height: 520px; " ></a> <img alt=""  src=""  style="width: 210px; height: 520px; " ></a> <br/>
+                    <p style="text-align: center;font-size: 20px">PQC Online Training Course</p>
                     <hr>
                     <p style="text-indent:2em ">Post-Quantum Cryptography (PQC) is the foundation of digital security in the future. Traditional cryptography maybe is not safe for many applications. Online Course is 30 hours training course, wich will admit 40 excellent trainees including young researcher, Ph.D. and master students.
                         <br/> 
