--- a/product.html
+++ b/product.html
@@ -60,7 +60,7 @@ var skew = base.getTime()
 if (skew > 0)
 date.setTime(date.getTime() - skew)
 }
-
+</script>
 <div id="google_translate_element"></div>    
 <body>
     <div >
