--- a/SMPC Introduction.html
+++ b/SMPC Introduction.html
@@ -73,6 +73,7 @@
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2017.html">SMPC Symposiu-2017</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2018.html">SMPC Symposiu-2018</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2019.html">SMPC Symposiu-2019</a> <br/>
+                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="SMPC-2020.html">SMPC Symposiu-2019</a> <br/>
                 </p>
             </div> 
             </div>
