--- a/CSAC Introduction.html
+++ b/CSAC Introduction.html
@@ -73,8 +73,8 @@
                     &nbsp; &nbsp; &nbsp; &nbsp; CSAC symposium would like to invit well-known researchers all over the world to present their best works about Cybersecurity and Cryptography. Everyone, who does the best works on above fields, will be invited to attend CSAC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="CSAC-2018.html">CSAC Symposiu-2018</a> <br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="CSAC-2019.html">CSAC Symposiu-2019</a> <br/>
+                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="CSAC-2018.html">CSAC Symposium-2018</a> <br/>
+                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="CSAC-2019.html">CSAC Symposium-2019</a> <br/>
                 </p>
             </div> 
             </div>
