--- a/Member Lin.html
+++ b/Member Lin.html
@@ -204,12 +204,12 @@ date.setTime(date.getTime() - skew)
                                         • The Scholarship of Chinese Aerospace Science and Technology Corporation, Nov. 2012.<br/>
                                         • Outstanding Graduate Student, 2012-2013<br/>
                                         • Outstanding Graduate of Guilin University of Electronic Technology, Jun. 2013<br/></p>
-                                    <p style="width: 96%;float: right">B.S., Shihezi University, Sept. 20007– Jun. 2001</b></p>
+                                    <p style="width: 96%;float: right">B.S., Shihezi University</b></p>
                                     <p style="font-size:15px;width: 90%;float: right">• Applied Mathematics (Mathematics Education), With Honors in Algebra and Application<br/>
                                         • Minor in Algebra and Application<br/></p>
-                                    <p style="width: 96%;float: right">Scholarship and Honor, Sept. 2007–Jun. 2001, Shihezi University</b></p>
+                                    <p style="width: 96%;float: right">Scholarship and Honor, Shihezi University</b></p>
                                     <p style="font-size:15px;width: 90%;float: right">• Undergraduate Honors Theses, Jun. 2001<br/>
-                                        • Outstanding Graduate of Shihezi University, Jun. 2001<br/></p>
+                                        • Outstanding Graduate of Shihezi University<br/></p>
                                 </div>
                             </td>
                         </tr>
