--- a/Member Lin.html
+++ b/Member Lin.html
@@ -208,7 +208,7 @@ date.setTime(date.getTime() - skew)
                                     <p style="font-size:15px;width: 90%;float: right">• Applied Mathematics (Mathematics Education), With Honors in Algebra and Application<br/>
                                         • Minor in Algebra and Application<br/></p>
                                     <p style="width: 96%;float: right">Scholarship and Honor, Shihezi University</b></p>
-                                    <p style="font-size:15px;width: 90%;float: right">• Undergraduate Honors Theses, Jun. 2001<br/>
+                                    <p style="font-size:15px;width: 90%;float: right">• Undergraduate Honors Theses<br/>
                                         • Outstanding Graduate of Shihezi University<br/></p>
                                 </div>
                             </td>
