--- a/courses.html
+++ b/courses.html
@@ -85,7 +85,7 @@
                    
                     <p style="text-indent:2em ">*AI and Security <a href="AI syllabus.html">AI and Security Syllabus(课程安排)</a> <a href="image/Training Course Registration Form-培训课程注册登记表.rar" download="Training Course Registration Form-培训课程注册登记表.rar">Registration Form(注册登记表)</a><br/>
                     <p style="text-indent:2em ">*Differential Privacy<br/> 
-                    <p style="text-indent:2em ">*Secure Computing (Privacy-Prserving Computating)<br/>
+                    <p style="text-indent:2em ">*Secure Computing (Privacy-Prserving Computing)<br/>
                 <hr>
                 <p style="text-indent:2em ">Online Training Courses: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>
                    
