--- a/courses.html
+++ b/courses.html
@@ -82,10 +82,12 @@
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation <a href="FHE syllabus.html">FHE Syllabus(课程安排)</a> <a href="image/2020-03-07-online-training-course-注册登记表.rar" download="2020-03-07-online-training-course-注册登记表.rar">Registration Form(注册登记表)</a><br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation <a href="PQC syllabus.html">PQC syllabus(课程安排)</a> <a href="image/Training Course Registration Form-培训课程注册登记表.rar" download="Training Course Registration Form-培训课程注册登记表.rar">Registration Form(注册登记表)</a><br/>
                     <p style="text-indent:2em ">*Secure Multi-party Computation and Implementation <a href="SMPC syllabus.html">SMPC Syllabus(课程安排)</a> <a href="image/Training Course Registration Form-培训课程注册登记表.rar" download="Training Course Registration Form-培训课程注册登记表.rar">Registration Form(注册登记表)</a><br/>
-                   
                     <p style="text-indent:2em ">*AI and Security <a href="AI syllabus.html">AI and Security Syllabus(课程安排)</a> <a href="image/Training Course Registration Form-培训课程注册登记表.rar" download="Training Course Registration Form-培训课程注册登记表.rar">Registration Form(注册登记表)</a><br/>
+                     <hr>
                     <p style="text-indent:2em ">*Differential Privacy<br/> 
                     <p style="text-indent:2em ">*Secure Computing (Privacy-Prserving Computing)<br/>
+                    <p style="text-indent:2em ">*Bitcion and Blockchain<br/>
+                    <p style="text-indent:2em ">*Trusted Computing<br/>
                 <hr>
                 <p style="text-indent:2em ">Online Training Courses: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>
                    
