--- a/courses.html
+++ b/courses.html
@@ -78,13 +78,13 @@
                      <hr>
                     <p style="text-indent:2em ">We also provide online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> 
                     <hr>
-                    <p style="text-indent:2em ">First Course Session<br/> 
+                    <p style="text-align: center;font-size: 20px">First Course Session</p>
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation <a href="FHE syllabus.html">FHE Syllabus(课程安排)</a> <a href="image/2020-03-07-online-training-course-注册登记表.rar" download="2020-03-07-online-training-course-注册登记表.rar">Registration Form(注册登记表)</a><br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation <a href="PQC syllabus.html">PQC syllabus(课程安排)</a> <a href="image/Training Course Registration Form-培训课程注册登记表.rar" download="Training Course Registration Form-培训课程注册登记表.rar">Registration Form(注册登记表)</a><br/>
                     <p style="text-indent:2em ">*Secure Multi-party Computation and Implementation <a href="SMPC syllabus.html">SMPC Syllabus(课程安排)</a> <a href="image/Training Course Registration Form-培训课程注册登记表.rar" download="Training Course Registration Form-培训课程注册登记表.rar">Registration Form(注册登记表)</a><br/>
                     <p style="text-indent:2em ">*AI and Security <a href="AI syllabus.html">AI and Security Syllabus(课程安排)</a> <a href="image/Training Course Registration Form-培训课程注册登记表.rar" download="Training Course Registration Form-培训课程注册登记表.rar">Registration Form(注册登记表)</a><br/>
                     <hr>
-                    <p style="text-indent:2em ">Second Course Session<br/> 
+                    <p style="text-align: center;font-size: 20px">Second Course Session</p> 
                     <p style="text-indent:2em ">*Differential Privacy<br/> 
                     <p style="text-indent:2em ">*Secure Computing (Privacy-Prserving Computing)<br/>
                     <p style="text-indent:2em ">*Bitcion and Blockchain<br/>
