--- a/ATC syllabus.html
+++ b/ATC syllabus.html
@@ -130,7 +130,7 @@ date.setTime(date.getTime() - skew)
                     <p style="text-indent:2em ">*Obfuscation<br/>
                     <p style="text-align: center;font-size: 20px">Lectures</p>
                      <hr>
-                    <p style="text-indent:2em ">* <br/>
+                    <p style="text-indent:2em ">*Foundmental of Cryptography <br/>
                     <p style="text-indent:2em ">*Secret-sharing<br/>
                     <p style="text-indent:2em ">*Secure Multi-parties Computation<br/>
                     <p style="text-indent:2em ">*Homomorphic Encryption<br/>
