--- a/courses.html
+++ b/courses.html
@@ -87,7 +87,7 @@
                     <p style="text-align: center;font-size: 20px">Second Course Session</p> 
                     <p style="text-indent:2em ">*Differential Privacy <a href="DP syllabus.html">Syllabus of Differential Privacy (课程安排)</a><br/> 
                     <p style="text-indent:2em ">*Secure Computation (Privacy-Prserving Computing) <a href="SC syllabus.html">Syllabus of Secure Computation (课程安排)</a><br/>
-                    <p style="text-indent:2em ">*Blockchains and Cryptocurrencies <a href="BC syllabus.html">Syllabus of Blockchains and Cryptocurrencies (课程安排)</a><br/>
+                    <p style="text-indent:2em ">*Blockchains and Cryptocurrencies <a href="BL syllabus.html">Syllabus of Blockchains and Cryptocurrencies (课程安排)</a><br/>
                     <p style="text-indent:2em ">*Advanced Topics in Cryptography <a href="ATC syllabus.html">Syllabus of Advanced Topics in Cryptography (课程安排)</a> <br/>
                     <!-- <p style="text-indent:2em ">*Trusted Computing<br/>  -->
                 <hr>
